feat: adds action file, tests

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	},
 	"scripts": {
 		"build": "ncc build ./src/index.ts",
-		"test": "vitest run",
+		"test": "node --test --experimental-test-coverage --import tsx/esm src/**/*.test.ts",
+		"test:watch": "node --test --watch --import tsx/esm src/**/*.test.ts",
 		"format": "prettier --write .",
 		"format:check": "prettier --check ."
 	},
@@ -26,9 +27,9 @@
 		"@types/node": "^24.10.0",
 		"@vercel/ncc": "^0.38.4",
 		"prettier": "^3.6.2",
-		"semantic-release": "^25.0.1",
-		"typescript": "^5.9.3",
-		"vitest": "^4.0.4"
+		"semantic-release": "^25.0.2",
+		"tsx": "^4.20.6",
+		"typescript": "^5.9.3"
 	},
 	"files": [
 		"dist"
