--- a/action.yml
+++ b/action.yml
@@ -14,13 +14,15 @@ inputs:
         "insecure": "boolean (default: false)",
         "force": "boolean (default: false)",
         "fileRoot": "string (optional)",
-        "pages": [
-          {
-            "pageId": "string",
-            "file": "string",
-            "title": "string (optional)"
-          }
-        ]
+         "pages": [
+           {
+             "pageId": "string",
+             "file": "string",
+             "title": "string (optional)",
+             "spaceKey": "string (optional, required for creating new pages)",
+             "parentId": "string (optional, parent page ID for new pages)"
+           }
+         ]
       }
     required: true
   debug:
