--- a/.github/workflows/build-rc.yml
+++ b/.github/workflows/build-rc.yml
@@ -18,6 +18,9 @@ jobs:
           node-version: "20"
           cache: "pnpm"
 
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 8
       - name: Install dependencies
         run: pnpm install
 
