fix: test command fix

--- a/.github/workflows/build-rc.yml
+++ b/.github/workflows/build-rc.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add dist/
+          git add -f dist/
           if [[ -n $(git status --porcelain) ]]; then
             git commit -m "Build RC: Update dist files [skip ci]"
             git push
