--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 	},
 	"scripts": {
 		"build": "ncc build ./src/index.ts",
-		"test": "node --test --experimental-test-coverage --import tsx/esm src",
-		"test:watch": "node --test --watch --import tsx/esm src",
+		"test": "bash -O globstar -c \"node --test --experimental-test-coverage --import tsx/esm src/**/*.test.ts\"",
+		"test:watch": "bash -O globstar -c \"node --test --watch --import tsx/esm src/**/*.test.ts\"",
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"dev": "tsx src/local-runner.ts --help",
