--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "happi-file-sync-confluence",
-	"version": "1.0.3",
+	"version": "2.0.1-rc.9",
 	"description": "",
 	"main": "dist/index.js",
 	"type": "module",
