feat: remove unsafe flag

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,6 @@ INPUT_FILE_MAPPINGS='{
   "user": "your-email@company.com",
   "pass": "your-api-token-or-password",
   "personalAccessToken": "",
-  "insecure": false,
   "force": false,
   "fileRoot": "./test-data",
   "pages": [
@@ -22,7 +21,7 @@ INPUT_FILE_MAPPINGS='{
 }'
 
 # Alternative Option 2: Single-line JSON (escape quotes and remove line breaks)
-# INPUT_FILE_MAPPINGS='{"baseUrl":"https://your-company.atlassian.net/wiki","user":"your-email@company.com","pass":"your-api-token","personalAccessToken":"","insecure":false,"force":false,"fileRoot":"./test-data","pages":[{"pageId":"123456789","file":"sample.md","title":"Test Page from Local Development","spaceKey":"DEV","parentId":""}]}'
+# INPUT_FILE_MAPPINGS='{"baseUrl":"https://your-company.atlassian.net/wiki","user":"your-email@company.com","pass":"your-api-token","personalAccessToken":"","force":false,"fileRoot":"./test-data","pages":[{"pageId":"123456789","file":"sample.md","title":"Test Page from Local Development","spaceKey":"DEV","parentId":""}]}'
 
 # Alternative Option 3: Use config files instead (recommended for complex setups)
 # Just copy and modify one of the files in test-data/configs/ and use:
