--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"dependencies": {
 		"@actions/core": "^1.11.1",
 		"@octokit/rest": "^22.0.1",
+		"marked": "^17.0.1",
 		"zod": "^4.1.12"
 	},
 	"devDependencies": {
