--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "happi-file-sync-confluence",
-	"version": "2.2.0",
+	"version": "2.3.0-rc.1",
 	"description": "",
 	"main": "dist/index.js",
 	"type": "module",
